--- a/cijenik/cijenik-servis.html
+++ b/cijenik/cijenik-servis.html
@@ -38,8 +38,10 @@
               <li class="slide">
                 <a href="../katalog.html">Katalog</a>
               </li>
-              <li class="slide visited">
-                <a href="../cijenik/cijenik-racunala.html">Cijenik</a>
+              <li class="slide">
+                <a class="current" href="../cijenik/cijenik-racunala.html"
+                  >Cijenik</a
+                >
               </li>
               <li class="slide">
                 <a href="../kontakt.html">Kontakt</a>
@@ -128,7 +130,7 @@
               Vršimo popravak računala i mobitela po najpovoljnijoj cijeni.
             </p>
 
-            <p><button>NARUČI</button></p>
+            <button class="servis-btn">NARUČI</button>
           </div>
 
           <div class="card">
@@ -136,7 +138,7 @@
             <div class="card-img-2"></div>
             <p class="price">400kn Mjesečno</p>
             <p class="cards-text">Održavanje mreže i umrežavanje</p>
-            <p><button>NARUČI</button></p>
+            <button class="servis-btn">NARUČI</button>
           </div>
 
           <div class="card">
@@ -145,7 +147,7 @@
 
             <p class="price">60kn</p>
             <p class="cards-text">Plati i kažemo vam kakvo je stanje!</p>
-            <p><button>NARUČI</button></p>
+            <button class="servis-btn">NARUČI</button>
           </div>
         </div>
       </section>
