--- a/katalog.html
+++ b/katalog.html
@@ -36,8 +36,8 @@
               <li class="slide">
                 <a href="./proizvodi_i_usluge.html">Proizvodi i Usluge</a>
               </li>
-              <li class="visited slide">
-                <a href="./katalog.html">Katalog</a>
+              <li class="slide">
+                <a class="current" href="./katalog.html">Katalog</a>
               </li>
               <li class="slide">
                 <a href="./cijenik/cijenik-racunala.html">Cijenik</a>
