--- a/kontakt.html
+++ b/kontakt.html
@@ -41,8 +41,8 @@
               <li class="slide">
                 <a href="./cijenik/cijenik-racunala.html">Cijenik</a>
               </li>
-              <li class="slide visited">
-                <a href="./kontakt.html">Kontakt</a>
+              <li class="slide">
+                <a class="current" href="./kontakt.html">Kontakt</a>
               </li>
             </ul>
           </nav>
