--- a/proizvodi_i_usluge.html
+++ b/proizvodi_i_usluge.html
@@ -33,8 +33,10 @@
               <li class="slide">
                 <a href="./index.html">Početna</a>
               </li>
-              <li class="slide visited">
-                <a href="./proizvodi_i_usluge.html">Proizvodi i Usluge</a>
+              <li class="current slide">
+                <a class="current" href="./proizvodi_i_usluge.html"
+                  >Proizvodi i Usluge</a
+                >
               </li>
               <li class="slide">
                 <a href="./katalog.html">Katalog</a>
