--- a/cijenik/cijenik-komponenti.html
+++ b/cijenik/cijenik-komponenti.html
@@ -38,8 +38,10 @@
               <li class="slide">
                 <a href="../katalog.html">Katalog</a>
               </li>
-              <li class="visited">
-                <a href="../cijenik/cijenik-racunala.html">Cijenik</a>
+              <li class="slide">
+                <a class="current" href="../cijenik/cijenik-racunala.html"
+                  >Cijenik</a
+                >
               </li>
               <li class="slide">
                 <a href="../kontakt.html">Kontakt</a>
