--- a/cijenik/cijenik-racunala.html
+++ b/cijenik/cijenik-racunala.html
@@ -124,9 +124,7 @@
           <div class="featured-product-item-image">
             <img src="../img/racunala/1603230.jpg" alt="" />
           </div>
-          <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
-          >
+          <a href="#"><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a>
           <div>
             <p class="txt-strike-through">4.443,33 kn</p>
             <p class="txt-price">3.999,00 kn</p>
@@ -327,7 +325,6 @@
       </div>
     </footer>
     <!-- End Footer -->
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <script src="../to_Top.js"></script>
