--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Početna</title>
-    <link rel="icon" type="image/png" href="./img/favicon/favicon.ico" />
+    <link rel="shortcut icon" href="./favicon.png" />
     <link rel="stylesheet" href="./css/stilovi.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
