--- a/katalog.html
+++ b/katalog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Katalog</title>
+    <link rel="shortcut icon" href="./favicon.png" />
     <link rel="stylesheet" href="./css/stilovi.css" />
     <script
       src="https://kit.fontawesome.com/255cb370a1.js"
