--- a/proizvodi_i_usluge.html
+++ b/proizvodi_i_usluge.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proizvodi i usluge</title>
+    <link rel="shortcut icon" href="./favicon.png" />
     <link rel="stylesheet" href="./css/stilovi.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <script
-      src="https://kit.fontawesome.com/255cb370a1.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
     <aside class="social-fx-bar">
@@ -306,7 +303,10 @@
       </div>
     </footer>
     <!-- End Footer -->
-
+    <script
+      src="https://kit.fontawesome.com/255cb370a1.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./script.js" defer></script>
     <script src="./to_Top.js"></script>
