--- a/katalog.html
+++ b/katalog.html
@@ -20,17 +20,16 @@
     </aside>
     <header>
       <div class="container">
-        <div class="mobile_nav">
+        <div class="menu-toggle-btn">
           <div class="burger" title="Open and close menu">
-            <div class="top stripe"></div>
-            <div class="middle stripe"></div>
-            <div class="bottom stripe"></div>
+            <span class="top stripe"></span>
+            <span class="middle stripe"></span>
+            <span class="bottom stripe"></span>
           </div>
         </div>
-
         <div class="mobile_menu">
           <nav>
-            <ul>
+            <ul class="mobile-ul">
               <li class="slide">
                 <a href="./index.html">Početna</a>
               </li>
