--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </div>
 
         <div class="mySlides fade">
-          <img src="./img/backgrounds/promos/carousel_ps5_preorder_1.webp" />
+          <img src="./img/backgrounds/promos/COD-ColdWar-db.jpg" />
         </div>
 
         <div class="mySlides fade">
