--- a/kontakt.html
+++ b/kontakt.html
@@ -182,12 +182,12 @@
             <h3>Brandovi</h3>
             <div class="footer-logo-grid">
               <a href="#"
-                ><img src="../img/logo/1200px-Apple_Logo.svg.png" alt=""
+                ><img src="./img/logo/1200px-Apple_Logo.svg.png" alt=""
               /></a>
 
               <a href="#"><img src="./img/logo/microsoft.png" alt="" /></a>
               <a href="#"
-                ><img src="../img/logo/1200px-HP_logo_2012.svg.png" alt=""
+                ><img src="./img/logo/1200px-HP_logo_2012.svg.png" alt=""
               /></a>
 
               <a href="#"><img src="./img/logo/amd.svg" alt="" /></a>
@@ -195,20 +195,18 @@
             <div class="footer-logo-grid">
               <a href="#"
                 ><img
-                  src="../img/logo/1280px-Intel_logo_(2020,_dark_blue).svg.png"
+                  src="./img/logo/1280px-Intel_logo_(2020,_dark_blue).svg.png"
                   alt=""
               /></a>
 
+              <a href="#"><img src="./img/logo/Acer-Logo_2011.png" alt="" /></a>
               <a href="#"
-                ><img src="../img/logo/Acer-Logo_2011.png" alt=""
-              /></a>
-              <a href="#"
-                ><img src="../img/logo/1024px-Dell_Logo.svg.png" alt=""
+                ><img src="./img/logo/1024px-Dell_Logo.svg.png" alt=""
               /></a>
 
               <a href="#"
                 ><img
-                  src="../img/logo/1200px-Huawei_Standard_logo.svg.png"
+                  src="./img/logo/1200px-Huawei_Standard_logo.svg.png"
                   alt=""
               /></a>
             </div>
