--- a/cijenik/cijenik-racunala.html
+++ b/cijenik/cijenik-racunala.html
@@ -139,7 +139,7 @@
             />
           </div>
           <a href="./katalog/katalog-mobiteli.html"
-            ><h3>Notebook HP OMEN 17-cb0017nm, 7SD75EA-</h3></a
+            ><h3>ASUS ROG Zephyrus S15</h3></a
           >
           <div>
             <p class="txt-strike-through">4.443,33 kn</p>
@@ -155,11 +155,11 @@
             />
           </div>
           <a href="./artikli/računalo-2.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Apple MacBook Air 13" Retina/DC i3 1.1GHz</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">8.443,33 kn</p>
+            <p class="txt-price">7.999,00 kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
@@ -168,7 +168,7 @@
             <img src="../img/racunala/racunalo-1.jpg" alt="" />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>HP EliteBook 840 G7 - Intel i5-10210U 4.2GHz / 14" FHD</h3></a
           >
           <div>
             <p class="txt-strike-through">4.443,33 kn</p>
@@ -181,7 +181,7 @@
             <img src="../img/racunala/racunalo-3.jpg" alt="" />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>ASUS ROG Zephyrus S15 GX502LXS-HF012T</h3></a
           >
           <div>
             <p class="txt-strike-through">4.443,33 kn</p>
@@ -194,11 +194,11 @@
             <img src="../img/racunala/lenovo.png" alt="" />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Lenovo ThinkBook 14 Mineral Grey 14.0"</h3></a
           >
           <div>
             <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-price">8.801,02 kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
@@ -210,11 +210,11 @@
             />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Asus UX325EA-WB501T Zenbook 13.3"</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">9.443,33 kn</p>
+            <p class="txt-price">7.812,02 kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
