--- a/cijenik/cijenik-komponenti.html
+++ b/cijenik/cijenik-komponenti.html
@@ -126,11 +126,11 @@
             <img src="../img/komponenti/msi-1030-aitx-2go.jpg" alt="" />
           </div>
           <a href="/cijenik/artikli/artikl-1.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>GeForce RTX 2080 AERO 8G</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">8.443,33 kn</p>
+            <p class="txt-price">7.999,00 kn</p>
           </div>
           <a href="/cijenik/artikli/artikl-1.html">
             <span class="view-btn">Pogledaj Proizvod</span></a
@@ -141,11 +141,11 @@
             <img src="../img/komponenti/b365mh.jpg" alt="" />
           </div>
           <a href="./katalog/katalog-mobiteli.html"
-            ><h3>Notebook HP OMEN 17-cb0017nm, 7SD75EA-</h3></a
+            ><h3>Gigabyte B365M H matična ploča</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">653,75 kn</p>
+            <p class="txt-price">494,64 kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
@@ -154,11 +154,11 @@
             <img src="../img/komponenti/int-cl-i5-9400f.jpg" alt="" />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Procesor Intel Core i5-9400F</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">1.856,84 Kn</p>
+            <p class="txt-price">1.156,84 Kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
@@ -167,50 +167,59 @@
             <img src="../img/komponenti/gai-1650-gh-4g.jpg" alt="" />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Grafička Gainward GTX1650 D6</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">1.562,11 Knn</p>
+            <p class="txt-price">1.262,11 Kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
         <div class="featured-product-item">
           <div class="featured-product-item-image">
-            <img src="../img/komponenti/gig-gv-n1030d5o-2g.jpg" alt="" />
+            <img
+              src="../img/komponenti/graficka-kartica-sapphire-radeon.jpg"
+              alt=""
+            />
           </div>
           <a href="../katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Grafička Sapphire Radeon RX VEGA 64 8GB</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">7.979,00 Kn</p>
+            <p class="txt-price">6.979,00 Kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
         <div class="featured-product-item">
           <div class="featured-product-item-image">
-            <img src="../img/komponenti/z390d.jpg" alt="" />
+            <img
+              src="../img/komponenti/memorija-kingston-ddr4-8gb-3000mhz-hyper-king-hx430c15pb3-8_1.jpg"
+              alt=""
+            />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Memorija Kingston DDR4 8GB 3000MHz</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">699,99 Kn</p>
+            <p class="txt-price">314,74 Kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
         <div class="featured-product-item">
           <div class="featured-product-item-image">
-            <img src="../img/komponenti/z390d.jpg" alt="" />
+            <img
+              src="../img/komponenti/maticna-ploca-asus-prime.jpg"
+              alt=""
+            />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Asus PRIME H310M-A R2.0</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">797,37 Kn</p>
+            <p class="txt-price">567,37 Kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
