--- a/cijenik/cijenik-mobiteli.html
+++ b/cijenik/cijenik-mobiteli.html
@@ -128,10 +128,10 @@
             />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Apple iPhone SE2 256GB, Crveni</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
+            <p class="txt-strike-through">5.238,61 kn</p>
             <p class="txt-price">3.999,00 kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
@@ -144,7 +144,7 @@
             />
           </div>
           <a href="./katalog/katalog-mobiteli.html"
-            ><h3>Notebook HP OMEN 17-cb0017nm, 7SD75EA-</h3></a
+            ><h3>Apple iPhone 11 64GB, Crveni</h3></a
           >
           <div>
             <p class="txt-strike-through">4.443,33 kn</p>
@@ -160,11 +160,11 @@
             />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>APPLE iPhone SE2, 64GB, Bijeli</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">7.443,33 kn</p>
+            <p class="txt-price">6.548,26 kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
@@ -176,11 +176,11 @@
             />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Apple iPhone 11 64GB, Žuti</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">7.443,33 kn</p>
+            <p class="txt-price">6.548,26 kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
@@ -192,11 +192,11 @@
             />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Apple iPhone 11 64GB, Ljubičasti</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">8.443,33 kn</p>
+            <p class="txt-price">6.999,00 kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
@@ -208,11 +208,11 @@
             />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Apple iPhone 11 Pro, Sivi</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">9.998,02 kn</p>
+            <p class="txt-price">8.998,02 kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
@@ -224,11 +224,11 @@
             />
           </div>
           <a href="./katalog/katalog-racunala.html"
-            ><h3>Notebook HP 250-G7 UMA i3-8130U/15.6</h3></a
+            ><h3>Apple iPhone 11 128GB, Ljubičasti</h3></a
           >
           <div>
-            <p class="txt-strike-through">4.443,33 kn</p>
-            <p class="txt-price">3.999,00 kn</p>
+            <p class="txt-strike-through">9.443,33 kn</p>
+            <p class="txt-price">7.999,00 kn</p>
           </div>
           <span class="view-btn">Pogledaj Proizvod</span>
         </div>
