--- a/katalog.html
+++ b/katalog.html
@@ -182,7 +182,7 @@
         <div class="featured-product-item">
           <div class="featured-product-item-image">
             <a href="./cijenik/cijenik-komponenti.html">
-              <img src="./img/komponenti/gig-gv-n1030d5o-2g.jpg" alt=""
+              <img src="./img/komponenti/graficka-gigabyte-nvidia-geforce-gtx-166-gv-n166sgaming-6gd_1.png" alt=""
             /></a>
           </div>
           <a href="./cijenik/cijenik-komponenti.html"></a>
